--- a/notebooks/multivariate_analysis.ipynb
+++ b/notebooks/multivariate_analysis.ipynb
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -255,6 +255,7 @@
     "df = pd.read_csv(\"../data/flight_data.csv\")\n",
     "\n",
     "df = df.drop(columns=['Unnamed: 0'])\n",
+    "\n",
     "df['departure_time'] = df['departure_time'].replace({\n",
     "    \"Early_Morning\": \"Early Morning\",\n",
     "    \"Late_Night\": \"Late Night\"\n",
@@ -265,6 +266,7 @@
     "})\n",
     "df['airline'] = df['airline'].replace({\n",
     "    \"GO_FIRST\": \"GO FIRST\",\n",
+    "    \"Air_India\": \"Air India\",\n",
     "})\n",
     "df['stops'] = df['stops'].replace({\n",
     "    \"zero\": \"0\",\n",
